--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dslash"
-version = "0.3.1"
+version = "0.3.2"
 description = "A library which supplements Nextcord by adding support for slash commands."
 authors = ["Artemis <me@arty.li>"]
 license = "MIT"
@@ -21,6 +21,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9"
 nextcord = "^2.0.0-alpha.3"
+docstring-parser = "^0.12"
 
 [tool.poetry.dev-dependencies]
 poethepoet = "^0.11.0b5"
