--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,8 @@ flake8-mutable = "^1.2.0"
 flake8-raise = "^0.0.5"
 flake8-string-format = "^0.3.0"
 flake8-todo = "^0.7"
-build = "^0.7.0"
-setuptools = "^58.3.0"
-wheel = "^0.37.0"
-twine = "^3.4.2"
+build = "^0.8.0"
+twine = "^4.0.1"
 
 [tool.isort]
 profile = "black"
@@ -59,7 +57,7 @@ _format = "black . -q"
 _format_imports = "isort . -q"
 lint = "flake8 ."
 format = ["_format_imports", "_format", "lint"]
-_build = "python -m build"
+build = ["_build"]
 _publish = "twine upload dist/*"
 publish = ["_build", "_publish"]
 
