--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install poetry
-        poetry cache clear
+        poetry cache clear pypi -n --all
         poetry install
     - name: Build and publish
       env:
