--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,6 @@ nextcord = "^2.0.0-alpha.3"
 docstring-parser = "^0.12"
 
 [tool.poetry.dev-dependencies]
-poethepoet = "^0.11.0b5"
 black = "^21.7b0"
 isort = "^5.9.3"
 flake8 = "^3.9.2"
@@ -39,6 +38,7 @@ flake8-string-format = "^0.3.0"
 flake8-todo = "^0.7"
 build = "^0.8.0"
 twine = "^4.0.1"
+poethepoet = "^0.16.1"
 
 [tool.isort]
 profile = "black"
