--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dslash"
-version = "0.6.4"
+version = "0.7.0"
 description = "A library which supplements Nextcord by adding support for slash commands."
 authors = ["Artemis <me@arty.li>"]
 license = "MIT"
@@ -14,21 +14,21 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.12",
     "Typing :: Typed",
 ]
 
 [tool.poetry.dependencies]
-python = "^3.9"
-nextcord = "^2.0.0-alpha.3"
-docstring-parser = "^0.12"
+python = "^3.12"
+nextcord = "^3.0.0"
+docstring-parser = "^0.17"
 
 [tool.poetry.dev-dependencies]
 black = "^23.3.0"
 isort = "^5.9.3"
-flake8 = "^3.9.2"
+flake8 = "^7.3.0"
 flake8-annotations = "^2.6.2"
-flake8-bugbear = "^21.4.3"
+flake8-bugbear = "^24.12.12"
 flake8-comprehensions = "^3.5.0"
 flake8-datetimez = "^20.10.0"
 flake8-docstrings = "^1.6.0"
@@ -47,7 +47,7 @@ src_paths = ["euterpe"]
 
 [tool.black]
 line-length = 100
-target-version = ["py39"]
+target-version = ["py312"]
 
 [tool.poe]
 verbosity = -1
